# Brainiac

./: .gitignore  CMakeLists.txt  README.md  debugall.cpp
include/: Csvdata.hpp  Csvdata_handler.hpp  Imgdata.hpp  Imgdata_handler.hpp  KNN.hpp  Kmeans.hpp  NeuralNet.hpp
src/: CMakeLists.txt  Csvdata_handler.cpp  Imgdata.cpp  Imgdata_handler.cpp  KNN.cpp  Kmeans.cpp  NeuralNet.cpp  test.cpp
